Bug 225718 - Crash when having two tags with the same name in one folder
Summary: Crash when having two tags with the same name in one folder
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.2.0
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-06 14:10 UTC by Johannes Wienke
Modified: 2012-06-27 10:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Wienke 2010-02-06 14:10:36 UTC
Application that crashed: digikam
Version of the application: 1.2.0 (rev.: 1085326)
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.3
Operating System: Linux 2.6.32-ARCH x86_64

What I was doing when the application crashed:
While editing tags I had two tags with the same in different branches of the same tag tree. I moved both to the same tag tree (Why does this work? They had the same name...) and afterwards I deleted one of the tags. This is where this crash appeared.

 -- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f3ad94337c0 (LWP 4148))]

Thread 21 (Thread 0x7f3ac4541710 (LWP 4166)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00000000006eb039 in Digikam::ScanController::run (this=0x27e0720) at /home/languitar/workspace/digiKam/digikam/scancontroller.cpp:502
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 20 (Thread 0x7f3ac3929710 (LWP 4167)):
#0  0x00007fff1b2cc8f4 in clock_gettime ()
#1  0x00007f3acb199e5f in clock_gettime () from /lib/librt.so.1
#2  0x00007f3ad2b5eced in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f3ad2b5eee1 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad2b5f085 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f3ad2b5d15d in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f3ad2b5d205 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f3acbc4244a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0x00007f3acbc42821 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#9  0x00007f3acbc42d50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0x00007f3ad2b5cfc6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x00007f3ad2b333b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f3ad2b33784 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f3ad2a4ce2b in QThread::exec() () from /usr/lib/libQtCore.so.4
#14 0x00007f3ad5f6b548 in Digikam::ImageFilterModelWorker::Thread::run (this=0x280c520) at /home/languitar/workspace/build/digiKam/digikam/../../../digiKam/libs/models/imagefiltermodelthreads.h:66
#15 0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#17 0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#18 0x0000000000000000 in ?? ()

Thread 19 (Thread 0x7f3ac3128710 (LWP 4168)):
#0  0x00007fff1b2cc8f4 in clock_gettime ()
#1  0x00007f3acb199e5f in clock_gettime () from /lib/librt.so.1
#2  0x00007f3ad2b5eced in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f3ad2b5eee1 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad2b5f085 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f3ad2b5d15d in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f3ad2b5d205 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f3acbc4244a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0x00007f3acbc42821 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#9  0x00007f3acbc42d50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0x00007f3ad2b5cfc6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x00007f3ad2b333b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f3ad2b33784 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f3ad2a4ce2b in QThread::exec() () from /usr/lib/libQtCore.so.4
#14 0x00007f3ad5f6b548 in Digikam::ImageFilterModelWorker::Thread::run (this=0x2853bb0) at /home/languitar/workspace/build/digiKam/digikam/../../../digiKam/libs/models/imagefiltermodelthreads.h:66
#15 0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#17 0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#18 0x0000000000000000 in ?? ()

Thread 18 (Thread 0x7f3ac2927710 (LWP 4169)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x2774390) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 17 (Thread 0x7f3ac2126710 (LWP 4170)):
#0  0x00007f3ad2b5d312 in ?? () from /usr/lib/libQtCore.so.4
#1  0x00007f3acbc4213a in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#2  0x00007f3acbc42920 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#3  0x00007f3acbc42d50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f3ad2b5cfc6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f3ad2b333b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f3ad2b33784 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x00007f3ad2a4ce2b in QThread::exec() () from /usr/lib/libQtCore.so.4
#8  0x00000000006e13de in Digikam::MetadataManagerWorker::Thread::run (this=0x2828aa0) at /home/languitar/workspace/build/digiKam/digikam/../../../digiKam/digikam/metadatamanager_p.h:143
#9  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#11 0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 16 (Thread 0x7f3ac1925710 (LWP 4171)):
#0  0x00007fff1b2cc8f4 in clock_gettime ()
#1  0x00007f3acb199e5f in clock_gettime () from /lib/librt.so.1
#2  0x00007f3ad2b5eced in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f3ad2b5eee1 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad2b5f085 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f3ad2b5d15d in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f3ad2b5d205 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f3acbc4244a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0x00007f3acbc42821 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#9  0x00007f3acbc42d50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0x00007f3ad2b5cfc6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x00007f3ad2b333b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f3ad2b33784 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f3ad2a4ce2b in QThread::exec() () from /usr/lib/libQtCore.so.4
#14 0x00000000006e13de in Digikam::MetadataManagerWorker::Thread::run (this=0x27c41e0) at /home/languitar/workspace/build/digiKam/digikam/../../../digiKam/digikam/metadatamanager_p.h:143
#15 0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#17 0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#18 0x0000000000000000 in ?? ()

Thread 15 (Thread 0x7f3ac1124710 (LWP 4172)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x2875ee0) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 14 (Thread 0x7f3ab9184710 (LWP 4173)):
#0  0x00007f3ad27e53e9 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3abeaa4a71 in metronom_sync_loop () from /usr/lib/libxine.so.1
#2  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#3  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7f3ab7713710 (LWP 4174)):
#0  0x00007f3ad1da4503 in select () from /lib/libc.so.6
#1  0x00007f3abeacc925 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x00007f3abeab23c9 in video_out_loop () from /usr/lib/libxine.so.1
#3  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#4  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7f3ab6f12710 (LWP 4175)):
#0  0x00007fff1b2cc8f4 in clock_gettime ()
#1  0x00007f3acb199e5f in clock_gettime () from /lib/librt.so.1
#2  0x00007f3ad2b5eced in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f3ad2b5eee1 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad2b5f085 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f3ad2b5d15d in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f3acbc4244a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#7  0x00007f3acbc42821 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#8  0x00007f3acbc42d50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0x00007f3ad2b5cfc6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0x00007f3ad2b333b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x00007f3ad2b33784 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f3ad2a4ce2b in QThread::exec() () from /usr/lib/libQtCore.so.4
#13 0x00007f3abecfd394 in Phonon::Xine::XineThread::run() () from /usr/lib/qt/plugins/phonon_backend/phonon_xine.so
#14 0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#16 0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#17 0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7f3ab6508710 (LWP 4178)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3abeab552b in ao_loop () from /usr/lib/libxine.so.1
#2  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#3  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7f3ab5d07710 (LWP 4200)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x3964990) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7f3aaf9e6710 (LWP 4211)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x3ab0570) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7f3aae9e4710 (LWP 4212)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x3cfbcb0) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7f3aab9de710 (LWP 4469)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x3e75ea0) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f3aaf1e5710 (LWP 4470)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x3e77330) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f3aad9e2710 (LWP 4471)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x61aadf0) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f3aac9e0710 (LWP 4472)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x672f530) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f3aad1e1710 (LWP 4478)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad6434e6a in Digikam::LoadSaveThread::run (this=0x76e9010) at /home/languitar/workspace/digiKam/libs/threadimageio/loadsavethread.cpp:131
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f3a8034b710 (LWP 6374)):
#0  0x00007f3ad27e507c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f3ad2a50c6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f3ad437da3c in ?? () from /usr/lib/libQtNetwork.so.4
#3  0x00007f3ad2a4fba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f3ad27e081a in start_thread () from /lib/libpthread.so.0
#5  0x00007f3ad1daac7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f3ad94337c0 (LWP 4148)):
[KCrash Handler]
#5  0x000000000060ebce in Digikam::Album::isRoot (this=0x0) at /home/languitar/workspace/digiKam/digikam/album.cpp:230
#6  0x000000000061041b in Digikam::TAlbum::tagPath (this=0x0, leadingSlash=true) at /home/languitar/workspace/digiKam/digikam/album.cpp:394
#7  0x00000000006105c3 in Digikam::TAlbum::prettyUrl (this=0x0) at /home/languitar/workspace/digiKam/digikam/album.cpp:413
#8  0x000000000049f00b in Digikam::ImageDescEditTab::updateRecentTags (this=0x3911b90) at /home/languitar/workspace/digiKam/libs/imageproperties/imagedescedittab.cpp:1037
#9  0x000000000049cade in Digikam::ImageDescEditTab::slotApplyAllChanges (this=0x3911b90) at /home/languitar/workspace/digiKam/libs/imageproperties/imagedescedittab.cpp:551
#10 0x0000000000496c3f in Digikam::ImageDescEditTab::qt_metacall (this=0x3911b90, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff1b225c10)
    at /home/languitar/workspace/build/digiKam/digikam/imagedescedittab.moc:119
#11 0x00007f3ad2b49bac in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#12 0x00007f3ad3ca68f7 in QAbstractButton::clicked(bool) () from /usr/lib/libQtGui.so.4
#13 0x00007f3ad3a0854b in ?? () from /usr/lib/libQtGui.so.4
#14 0x00007f3ad3a0a15b in ?? () from /usr/lib/libQtGui.so.4
#15 0x00007f3ad3a0a3a5 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#16 0x00007f3ad36f5b50 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#17 0x00007f3ad36a70dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0x00007f3ad36ae205 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#19 0x00007f3ad4a75146 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#20 0x00007f3ad2b34a7c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#21 0x00007f3ad36adac2 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#22 0x00007f3ad3713ab4 in ?? () from /usr/lib/libQtGui.so.4
#23 0x00007f3ad371278a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#24 0x00007f3ad373ab1c in ?? () from /usr/lib/libQtGui.so.4
#25 0x00007f3acbc3f26e in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x00007f3acbc42c28 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#27 0x00007f3acbc42d50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0x00007f3ad2b5cf73 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#29 0x00007f3ad373a2fe in ?? () from /usr/lib/libQtGui.so.4
#30 0x00007f3ad2b333b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#31 0x00007f3ad2b33784 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007f3ad2b35939 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#33 0x000000000078274c in main (argc=5, argv=0x7fff1b228878) at /home/languitar/workspace/digiKam/digikam/main.cpp:195

Reported using DrKonqi
Comment 1 Johannes Wienke 2010-02-06 14:29:04 UTC
SVN commit 1086092 by jwienke:

 * Try to fix / prevent crash with recently assigned tags if there is no valid parent for a tag (how can this happen?)
 * save state in ImageDescEditTab
 
CCBUGS: 225718

 M  +20 -3     imagedescedittab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1086092
Comment 2 Johannes Wienke 2010-02-27 14:50:26 UTC
SVN commit 1096727 by jwienke:

While moving tags ensure that this doesn't result in two tags with the same name under the same parent.

BUG: 225718

 M  +2 -4      NEWS  
 M  +35 -26    digikam/albummanager.cpp  
 M  +10 -0     digikam/albummanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1096727