While moving tags ensure that this doesn't result in two tags with the same name under the same parent.

BUG: 225718

svn path=/trunk/extragear/graphics/digikam/; revision=1096727